# Barnes-Hut-Gravity-Sim

./: CMakeLists.txt  README.md  main.cpp
include/: Body.hpp  CoM.hpp  Sim.hpp  Simtree.hpp  Vec2.hpp  common.hpp  logging.hpp
src/: Body.cpp  Sim.cpp  Simtree.cpp  Vec2.cpp  common.cpp  logging.cpp
